# detl

./: .gitignore  MEDIUM_DRAFT.md  README.md  departments.csv  index.html  mkdocs.yml  pyproject.toml  test_isolate.py  test_mask.py
01_configuration/: index.html
02_columns_and_types/: index.html
03_null_tactics/: index.html
04_constraints/: index.html
05_pipeline/: index.html
06_connectors/: index.html
07_connector_api_reference/: index.html
detl/: __init__.py  cli.py  config.py  constants.py  core.py  exceptions.py  schema.py
detl/connectors/: __init__.py  base.py  memory.py
detl/connectors/cloud/: s3.py
detl/connectors/database/: base.py  mysql.py  postgres.py  sqlite.py
detl/connectors/file/: csv.py  excel.py  parquet.py
detl/engine/: __init__.py  actions.py  constraints.py  core.py  nulls.py  pipeline.py  types.py
detl/schema/: __init__.py  common.py  constraints.py  core.py  nulls.py
docs/: 01_configuration.md  02_columns_and_types.md  03_null_tactics.md  04_constraints.md  05_pipeline.md  06_connectors.md  07_connector_api_reference.md  index.md  syntax_guide.md
examples/: 01_basic.yml  02_advanced_pipeline.yml  03_kitchen_sink.yml  bad_01_invalid_schema.yml  bad_02_data_error.yml  employees_raw.csv  test_tx.yml  test_users.yml
examples/data/: transactions_corrupt.csv  users_clean.csv  users_dirty.csv
search/: search_index.json
site/: 404.html
site/07_connector_api_reference/: index.html
site/search/: search_index.json
tests/: test_allowed_values_separator.py  test_chaos.py  test_defaults_idiot_proof.py  test_defaults_validation.py  test_dup_coercion.py  test_engine.py  test_fill_date_execution.py  test_fill_value_typing.py  test_pipeline.py  test_schema.py  test_schema_inference.py  test_string_trimming.py
tests/integration/: test_db_chaos.py  test_postgres.py
tests/test_manual/: clean_airlines.csv  conf.yaml  main.ipynb  main.py
