[project]
name = "detl"
version = "0.1.0"
description = "Declarative ETL tool for blazing-fast, strictly typed Data Contracts powered by Polars and Pydantic."
readme = "README.md"
authors = [
    { name = "Gleb", email = "gleb@example.com" }
]
requires-python = ">=3.10"
urls = { Repository = "https://github.com/gleb/detl" }
dependencies = [
    "gspread>=6.2.1",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.0",
    "rich>=13.0.0",
    "connectorx>=0.4.5",
    "adbc-driver-postgresql>=1.10.0",
    "adbc-driver-sqlite>=1.10.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "boto3>=1.42.54",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "pandas>=2.3.3",
]

[project.scripts]
detl = "detl.cli:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.2",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "testcontainers>=4.14.1",
]
